# poc_fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: issues-branch-creation.yml
api/: database.py  exceptions.py  router.py  settings.py
src/Authentication/: auth_model.py  auth_route.py  auth_schema.py  auth_service.py
src/Blog/: blog_model.py  blog_route.py  blog_schema.py  blog_service.py
src/User/: user_model.py  user_route.py  user_schema.py  user_service.py
src/WhatsAppBot/: whats_response.py
tests/: sample_test.py
